# Voice-Companion-Backend

./: .gitignore  .replit  email-verify.html  landing.html  pnpm-lock.yaml  privacy.html  pyproject.toml  replit.md  terms.html
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  async-fixes.md  billing-guardrails.md  conv-mode.md  entitlements.md  exact-spec-tasks.md  photo-send-architecture.md  prompt-build-hang.md  supabase-schema-drift.md  tiered-memory.md
artifacts/voice-companion/: run.py  (+5 more)
attached_assets/: Pasted-Add-an-onboarding-screen-that-appears-once-per-user-bet_1783828418681.txt  Pasted-Build-the-usage-caps-entitlements-system-The-user-entit_1783886359731.txt  Pasted-Create-and-wire-up-a-Memory-Import-feature-Please-compl_1783827470068.txt  Pasted-I-ve-stopped-interacting-with-the-workspace-and-I-need-_1783751118667.txt  Pasted-TASK-Build-the-Legacy-Vault-system-Multi-file-task-READ_1783833131712.txt  Pasted-That-s-not-just-interesting-that-s-the-smoking-gun-Your_1783798495388.txt  Pasted-The-log-panel-in-this-tool-is-frozen-on-an-old-snapshot_1783796371122.txt  Pasted-This-is-a-genuinely-good-fix-and-importantly-it-s-a-roo_1783751809890.txt  Pasted-URGENT-voice-stopped-working-Debug-and-fix-immediately-_1783657128092.txt  Pasted-Update-the-Legacy-Mode-info-modal-LegacyModal-with-the-_1780950945971.txt  Pasted-Use-Power-mode-Build-the-session-and-memory-cap-enforce_1783647470205.txt  Pasted-python3-EOF-import-re-App-tsx-extract-userName-from-ses_1782348103240.txt  Pasted-python3-PATCH-import-re-Fix-1-Chat-tsx--1782349966624_1782349966624.txt
(+205 files in other folders)
